bpo-30246: fix several error messages which only mention bytes in struct (#1421)